--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl">
-head>
+<head>
 <meta charset="UTF-8">
 <title>Labo's web development 1 - 2024-25</title>
 </head>
@@ -8,7 +8,7 @@ head>
 <header>
   <h1>Labo's van jouw naam</h1>
 </header>
-<section
+<section>
 <h2>Eerste Semester</h2>
 <ul>
   <li><a href="labo2/index.html">Labo 2</a></li>
