--- a/labo4/Demo/Picture/index.html
+++ b/labo4/Demo/Picture/index.html
@@ -12,7 +12,7 @@
 <p>Resize the browser window to load different images.</p>
 
 <picture>
-    <source media="max-width:300px" src="images/poppy2.jpg">
+    <source media="max-width:800px" srcset="images/poppy2.jpg">
     <img src="images/poppy1.jpg" alt="poppy"/>
 </picture>
 </body>
