--- a/labo2/index.html
+++ b/labo2/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html>
+<head><title>Index of ./labo2</title></head>
 <body>
+    <h2>Index of ./labo2</h2>
+    <hr>
+    <ul>
+		<li>
+			<a href='../'>../</a>
+		</li>
+		<li>
+			<a href='fake.labo.txt'>fake.labo.txt</a>
+		</li>
+		<li>
+			<a href='opdracht'>opdracht</a>
+		</li>
 
+	</ul>
 </body>
 </html>
