--- a/labo2/opdracht/index.html
+++ b/labo2/opdracht/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>opdracht 5</title>
-</head>
+<html>
+<head><title>Index of ./labo2/opdracht</title></head>
 <body>
-<h1>inleiding HTML5</h1>
-<p>Dit is een voorbeeld van een website</p>
-<p>Dit is nog een paragraaf</p>
+    <h2>Index of ./labo2/opdracht</h2>
+    <hr>
+    <ul>
+		<li>
+			<a href='../'>../</a>
+		</li>
+		<li>
+			<a href='IMAGES'>IMAGES</a>
+		</li>
+		<li>
+			<a href='opdracht 9.html'>opdracht 9.html</a>
+		</li>
+		<li>
+			<a href='opdracht.html'>opdracht.html</a>
+		</li>
+		<li>
+			<a href='Web development 2.pdf'>Web development 2.pdf</a>
+		</li>
+
+	</ul>
 </body>
 </html>
