--- a/labo3/index.html
+++ b/labo3/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html>
+<head><title>Index of ./labo3</title></head>
 <body>
+    <h2>Index of ./labo3</h2>
+    <hr>
+    <ul>
+		<li>
+			<a href='../'>../</a>
+		</li>
+		<li>
+			<a href='demos'>demos</a>
+		</li>
+		<li>
+			<a href='HTML deel 2.pdf'>HTML deel 2.pdf</a>
+		</li>
+		<li>
+			<a href='opleidingsaanbod VIVES.html'>opleidingsaanbod VIVES.html</a>
+		</li>
+		<li>
+			<a href='Personal homepage opdracht'>Personal homepage opdracht</a>
+		</li>
+		<li>
+			<a href='tabel.html'>tabel.html</a>
+		</li>
 
+	</ul>
 </body>
 </html>
