--- a/labo4/Demo/Picture/index.html
+++ b/labo4/Demo/Picture/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Images</title>
-</head>
+<html>
+<head><title>Index of ./labo4/Demo/Picture</title></head>
 <body>
+    <h2>Index of ./labo4/Demo/Picture</h2>
+    <hr>
+    <ul>
+		<li>
+			<a href='../'>../</a>
+		</li>
+		<li>
+			<a href='images'>images</a>
+		</li>
 
-
-<h1>The picture element</h1>
-
-<p>Resize the browser window to load different images.</p>
-
-<picture>
-    <source media="max-width:800px" srcset="images/poppy2.jpg">
-    <img src="images/poppy1.jpg" alt="poppy"/>
-</picture>
+	</ul>
 </body>
 </html>
