--- a/labo3/index.html
+++ b/labo3/index.html
@@ -2,28 +2,18 @@
 <html>
 <head><title>Index of ./labo3</title></head>
 <body>
-    <h2>Index of ./labo3</h2>
-    <hr>
-    <ul>
-		<li>
-			<a href='../'>../</a>
-		</li>
-		<li>
-			<a href='demos'>demos</a>
-		</li>
-		<li>
-			<a href='HTML deel 2.pdf'>HTML deel 2.pdf</a>
-		</li>
-		<li>
-			<a href='opleidingsaanbod VIVES.html'>opleidingsaanbod VIVES.html</a>
-		</li>
-		<li>
-			<a href='Personal homepage opdracht'>Personal homepage opdracht</a>
-		</li>
-		<li>
-			<a href='tabel.html'>tabel.html</a>
-		</li>
+<header>
+	<h1>Labo 3</h1>
+</header>
+<section>
+	<h2>Eerste Semester</h2>
+	<ul>
+		<li><a href="./personalHomepage">Homepage</a></li>
+		<li><a href="./Contactinformation">Contactinformation</a></li>
+		<li><a href="./Opleidingsaanbod">Opleidingsaanbod</a></li>
+		<li><a href="/index.html">Back</a></li>
 
 	</ul>
+</section>
 </body>
 </html>
