--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head><title>Index of Root</title></head>
+<head><title>Richelle-Yhasmien Debruyne</title></head>
 <body>
-<section
 <h2>Eerste Semester</h2>
 <section>
 <ul>
