--- a/labo3/index.html
+++ b/labo3/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title>Index of ./labo3</title></head>
+<head><title>LABO3</title></head>
 <body>
 <header>
 	<h1>Labo 3</h1>
@@ -9,8 +9,8 @@
 	<h2>Eerste Semester</h2>
 	<ul>
 		<li><a href="./personalHomepage">Homepage</a></li>
-		<li><a href="./Contactinformation">Contactinformation</a></li>
-		<li><a href="opleidingsaanbod">Opleidingsaanbod</a></li>
+		<li><a href="./contactinformation/index.html">Contactinformation</a></li>
+		<li><a href="Opleidingsaanbod">Opleidingsaanbod</a></li>
 		<li><a href="/index.html">Back</a></li>
 
 	</ul>
