--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head><title>Richelle-Yhasmien Debruyne</title></head>
 <body>
+<h1> Richelle-Yhasmien Debruyne's labo's</h1>
 <h2>Eerste Semester</h2>
 <section>
 <ul>
