--- a/labo3/index.html
+++ b/labo3/index.html
@@ -10,7 +10,8 @@
 	<ul>
 		<li><a href="./personalHomepage">Homepage</a></li>
 		<li><a href="./contactinformation/index.html">Contactinformation</a></li>
-		<li><a href="Opleidingsaanbod">Opleidingsaanbod</a></li>
+		<li><a href="/opleidingsaanbod">opleidingsaanbod</a></li>
+		<li><a href="/HTML DEEL 2">pdf</a></li>
 		<li><a href="/index.html">Back</a></li>
 
 	</ul>
