--- a/labo3/opleidingsaanbod/index.html
+++ b/labo3/opleidingsaanbod/index.html
@@ -5,7 +5,7 @@
     <title>opleidingsaanbod</title>
 </head>
 <body>
-<li><a href="Opleidingsaanbod.html">opleidingsaanbod opdracht</a></li>
+<li><a href="/Opleidingsaanbod.html">opleidingsaanbod opdracht</a></li>
 
 <li><a href="/index.html">Back</a></li>
 </body>
