--- a/labo3/personalHomepage/personal homepage.html
+++ b/labo3/personalHomepage/personal homepage.html
@@ -13,7 +13,7 @@
         <h2> Persoonlijke informatie</h2>
     </header>
     <ul>
-        <li> Volledige naam: Richelle-Yhasmien Debruyne</li>
+        <li> Volledige naam: Richelle D.</li>
         <li> mijn adres: Weidestraat 5</li>
         <li> telefoonnummer: 123456789</li>
         <li> emailadres:
