--- a/labo4/gesplitst/index.html
+++ b/labo4/gesplitst/index.html
@@ -9,6 +9,11 @@
 <header>
     <h1>Richelle</h1>
 </header>
+<nav>
+    <a href="index.html">Over mij</a> |
+    <a href="hobbys.html">Hobby's</a> |
+    <a href="likes.html">Likes</a>
+</nav>
 
 <nav>
     <section>
