--- a/labo4/oplossing persoonlijke webpagina/prognose.html
+++ b/labo4/oplossing persoonlijke webpagina/prognose.html
@@ -16,7 +16,7 @@
             <h2>Persoonlijke informatie</h2>
         </header>
         <ul>
-            <li>Volledige naam: Richelle D.</li>
+            <li>Volledige naam: Richelle-Yhasmien Debruyne</li>
             <li>Adres: Weidestraat 5</li>
             <li>Telefoonnummer: 123456789</li>
             <li>Email:
