--- a/labo4/gesplitst/hobbys.html
+++ b/labo4/gesplitst/hobbys.html
@@ -11,8 +11,8 @@
 </header>
 
 <nav>
-  <a href="index.html">Over mij</a> |
-  <a href="hobbys.html">Hobby's</a> |
+  <a href="index.html">Over mij</a>
+  <a href="hobbys.html">Hobby's</a>
   <a href="likes.html">Likes</a>
 </nav>
 
