--- a/labo 5/index.html
+++ b/labo 5/index.html
@@ -5,8 +5,8 @@
   <title>personalHomepage</title>
 </head>
 <body>
-<li><a href="./CSS%20DEEL%201">Verslag</a></li>
-<li><a href="./Opdracht%206">Opdracht 6</a></li>
+<li><a href="./CSS%20DEEL%201/Verslag5.pdf">Verslag</a></li>
+<li><a href="./Opdracht%206/opdracht%206.html">Opdracht 6</a></li>
 <li><a href="/index.html">Back</a></li>
 </body>
 </html>
