--- a/labo2/index.html
+++ b/labo2/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
-<html>
-<head><title>Index of ./labo2</title></head>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>labo 2</title>
+</head>
 <body>
-    <h2>Index of ./labo2</h2>
-    <hr>
-    <ul>
-		<li>
-			<a href='../'>../</a>
-		</li>
-		<li>
-			<a href='fake.labo.txt'>fake.labo.txt</a>
-		</li>
-		<li>
-			<a href='opdracht'>opdracht</a>
-		</li>
+<li><a href="./opdracht/opdracht.html">opdracht</a></li>
+<li><a href="./opdracht/opdracht9.html">opdracht 9</a></li>
+<li><a href="./opdracht/Web%20development%202.pdf">verslag</a></li>
 
-	</ul>
+<li><a href="/index.html">Back</a></li>
 </body>
 </html>
