--- a/labo7/index.html
+++ b/labo7/index.html
@@ -9,10 +9,10 @@
   <h2>Eerste Semester</h2>
   <ul>
     <li><a href="./Kalender/Kalender.html">kalender oefening</a></li>
-    <li><a href="./Verslag/CSSDEEL%203.pdf>Verslag</a></li>
-    <li><a href="./opdracht/index.html>Opdracht Nature blog</a></li>
-    <li><a href="./Opdracht%202/persweb.html>nieuwe tabel in persoonlijke website</a></li>
-    <li><a href="./OpdrachtPersoonlijkeWebpagina/persweb2.html.html>Opdracht css pers website</a></li>
+    <li><a href="./Verslag/CSSDEEL%203.pdf">Verslag</a></li>
+    <li><a href=".natureblog/index.html">Nature blog</a></li>
+    <li><a href="./Opdracht%202/persweb.html">nieuwe tabel in persoonlijke website</a></li>
+    <li><a href="./OpdrachtPersoonlijkeWebpagina/persweb2.html">Opdracht css pers website</a></li>
 
     <li><a href="/index.html">Back</a></li>
   </ul>
