--- a/labo8/index.html
+++ b/labo8/index.html
@@ -8,8 +8,8 @@
 <section>
     <h2>Eerste Semester</h2>
     <ul>
-        <li><a href="./opdracht%20cocktail/loungestart.html">kalender oefening</a></li>
-        <li><a href="./Opdracht%20Lorem%20Ipsum">Opdracht Lorem Ipsum</a></li>
+        <li><a href="./opdracht%20cocktail/loungestart.html">Cocktail oefening</a></li>
+        <li><a href="./Opdracht%20Lorem%20Ipsum/Lorem%20ipsum.html">Opdracht Lorem Ipsum</a></li>
         <li><a href="./Opdracht%20Lorem%20Ipsum%20Extra/loremipsumextra.html">Lorem Ipsum extra</a></li>
         <li><a href="./Verslag/css%20deel%204.pdf">Verslag</a></li>
         <li><a href="/index.html">Back</a></li>
